--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
     "axios": "^1.7.9",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17"
   }
 }
